--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "eslint": "^3.15.0",
     "istanbul": "^0.4.5",
     "mocha": "^3.2.0"
+  },
+  "dependencies": {
+    "lodash": "^4.17.4"
   }
 }
