--- a/package.json
+++ b/package.json
@@ -24,11 +24,25 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "cz-conventional-changelog": "^2.0.0",
     "eslint": "^3.15.0",
+    "ghooks": "^2.0.0",
     "istanbul": "^0.4.5",
-    "mocha": "^3.2.0"
+    "mocha": "^3.2.0",
+    "semantic-release": "^6.3.2",
+    "validate-commit-msg": "^2.11.2"
   },
   "dependencies": {
     "lodash": "^4.17.4"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    },
+    "ghooks": {
+      "commit-msg": "validate-commit-msg",
+      "pre-commit": "npm run test",
+      "pre-push": "npm run test"
+    }
   }
 }
