docs: Add no-get-state rule documentation

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "mocha tests/**/*.js",
     "test:watch": "mocha tests/**/*.js -w",
     "test:coverage": "istanbul cover --dir reports/coverage node_modules/mocha/bin/_mocha tests/**/*.js -- --reporter dot",
-    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
+    "semantic-release": "semantic-release pre && semantic-release post"
   },
   "keywords": [
     "eslint",
